[gd_scene load_steps=2 format=3 uid="uid://cnf2enggjf5ky"]

[ext_resource type="Script" path="res://scripts/win_screen.gd" id="1_0b4yq"]

[node name="WinScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 640.0
script = ExtResource("1_0b4yq")

[node name="YouWinLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 448.0
offset_top = 112.0
offset_right = 719.0
offset_bottom = 200.0
theme_override_font_sizes/font_size = 64
text = "You Win!"

[node name="DeathCountLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 264.0
offset_top = 264.0
offset_right = 896.0
offset_bottom = 309.0
theme_override_font_sizes/font_size = 32
text = "You died a total of ... wait, you didn't die?"
horizontal_alignment = 1

[node name="PlayAgainButton" type="Button" parent="."]
layout_mode = 0
offset_left = 480.0
offset_top = 376.0
offset_right = 675.0
offset_bottom = 434.0
theme_override_font_sizes/font_size = 32
text = "Play Again"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 480.0
offset_top = 480.0
offset_right = 675.0
offset_bottom = 538.0
tooltip_text = "Why would you wanna do that though?"
theme_override_font_sizes/font_size = 32
text = "Quit"

[connection signal="pressed" from="PlayAgainButton" to="." method="_on_play_again_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
